# rapport3A

./: .gitignore  DEPENDENCIES.md  Makefile  README.md  makeloop.ps1  ok.ts  pyproject.toml
architect/: plan.md
chercheur/: orness.md  plan.md  sujet.md
inventeur/: contenuCommun.md  creditAgricole.md  ditrit.md  lidy.md  orness.md  webdba.md
methode/: redaction.ae.md
misc/: .gitignore  README.md
rapport4/: rapport4.md
rapport4/misc/: Lidy-NewParser-Parse.drawio
rapport4/uml/: lidy.sizing.puml  webdba.burst.exacc.puml  webdba.burst.exasystem.detail.puml
realisation/: glossaire.md  references.md
uml/: lidy.expression.puml  lidy.parser.puml  webdba.burst.exasystem.detail.puml  webdba.burst.simplified.puml
