[tool.poetry]
name = "rapport"
version = "0.1.0"
description = ""
authors = ["Mathieu CAROFF <mathieu.caroff@free.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
plumbum = "^1.6.9"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
